@@ -1,3 +1,7 @@
+2010-07-21
+
+	* src/prefs_template.c: confirm on cancel if templates are modified.
+
 2010-07-20
 
 	* src/importcsv.c: added 'Alias' attribute.
